--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="refresh" content="0; URL=https://youtu.be/tvDyQxHM6GQ">
+    <meta http-equiv="refresh" content="0; URL=https://pranavtej.github.io/SIH2023/h.html">
 </head>
 <body>
     <!-- Optional content here (will be shown if the redirect doesn't happen) -->
