--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="refresh" content="0; URL=https://pranavtej.github.io/SIH2023/h.html">
+    <meta http-equiv="refresh" content="0; URL=https://sih2k23internalhackathon-2002sais-dev.apps.sandbox-m3.1530.p1.openshiftapps.com/teamlogin">
 </head>
 <body>
     <!-- Optional content here (will be shown if the redirect doesn't happen) -->
