--- a/schedule.html
+++ b/schedule.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="refresh" content="0; URL=https://pranavtej.github.io/SIH2023/h.html">
+    <meta http-equiv="refresh" content="0; URL=https://pranavtej.github.io/SIH2023/schedule.pdf">
 </head>
 <body>
     <!-- Optional content here (will be shown if the redirect doesn't happen) -->
